k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-web
  labels:
    name: test-web
    app: test-web
